Sat Jun 17 23:46:32 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* A couple of nice new menu bgs from pabsmonkey.
	* The example.fehrc has theme entries for them, so if you copy it
	to ~/.fehrc, using feh --theme brushed will use the brushed menu
	bg. Same for --theme chrome.

Sat Jun 17 12:57:49 PDT 2000 Paul Duncan <pabs@pablotron.org>
   
   * wget is now quiet by default (wget -q). it's verbose if the
   -V or --verbose flag is passed to feh.  Your terminal will
   thank you.
   * mirrored the same change too cam.  cam -V or cam --verbose
   will enable verbose mode for feh and the forked wgets.
   * the second mouse button now zooms again, and the third button
   pans.
   * added menu-button option too (-4 or --menu-button). ctrl+the
   menu button brings up the menu.  defaults to the right mouse
   button, and you can set it to 0 for any button (including ones
   >3, there's no bounds checking).  This feature is disabled by
   the -N or --no-menus flag.

Sat Jun 17 20:41:24 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Apend ? and a random number to the image url for webcams so that
	the image isn't cached. Much better.

Fri Jun 16 22:52:50 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Menus can have a background image now. There is a default one,
	courtesy of Pablo P Duncan (http://10k.dhs.org/~dmron/arch.html).
	* You can use any image you like for the background, by using
	--menu-bg FILE to select one. I had a small amount of fun using
	Britney as my menu background. Strange, but true.

Wed Jun 14 18:53:06 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added --progress-gran NUM. Sets the progressive-loading
	granularity to NUM, an integer between 0 and 100. This is the
	percentage of the image to load before updating the display. 0 is
	super-smooth, but slightly slower than 100, which loads the whole
	image before showing anything. Use lower numbers to get
	responsiveness over slow network connections...
