@@ -1,55 +1,0 @@
-# Feh configuration file.
-# Lines starting with # are comments. Don't use comments mid-line.
-
-# Feh expects to find this as ~/.fehrc or /etc/fehrc
-# If both are available, ~/.fehrc will be used
-
-# Options defined in theme_name/options pairs.
-# Separate themename and options by whitespace.
-
-# There are two ways of specifying the theme. Either use feh -C themename,
-# or use a symbolic link to feh with the name of the theme. eg
-# ln -s `which feh` ~/bin/mkindex
-# Now when you run 'mkindex', feh will load the config specified for the
-# mkindex theme.
-
-# ======================
-# Some examples of usage
-# ======================
-
-# Set the default feh options to be recursive and verbose
-# feh -rV
-
-# Multiple options can of course be used. They should all be on one line
-# imagemap -rV --quiet -W 400 -H 300 --thumb-width 40 --thumb-height 30
-
-# ================================================
-# Here I set some useful themes for you to try out
-# ================================================
-
-# Webcam mode, simply specify the url(s).
-# e.g. feh -Cwebcam http://cam1 http://cam2
-webcam --multiwindow --keep-http --reload 30
-
-# Create an index of the current directory. This version uses . as the
-# current dir, so you don't even need any commandline arguments.
-mkindex -iVO index.jpg .
-
-# More ambitious version...
-imgidx -iVO .fehindex.jpg --limit-width 1200 --thumb-width 90 --thumb-height 90 .
-
-# Show a presentation
-present --full-screen --sort name
-
-# Booth mode ;-)
-booth --full-screen --slideshow-delay 20
-
-# Screw xscreensaver, use feh =)
-screensave --full-screen --randomize --slideshow-delay 5
-
-# Add <img> tags to your html with ease :-)
-newimg -q -L "<img src=\"%f\" alt=\"feh\" border=\"0\" width=\"%w\" height=\"%h\">"
-
-# Different menus
-chrome --menu-bg @prefix@/share/feh/images/menubg_chrome.png
-brushed --menu-bg @prefix@/share/feh/images/menubg_brushed.png
