@@ -1,3 +1,8 @@
+Sun Jun 18 00:26:06 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Now feh will write a default ~/.fehrc if none is found, but only
+	if there is no /etc/fehrc in place already.
+
 Sat Jun 17 23:46:32 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* A couple of nice new menu bgs from pabsmonkey.
